--- a/index.html
+++ b/index.html
@@ -15,27 +15,92 @@
    <!-- CSS -->
     <link rel="stylesheet" href="style.css">
     <title>Weather Forecast</title>
+
+    <script
+        src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js">
+     </script>
 </head>
 <html>
 <body>
-    <!-- SIDEBAR -->
-
-    <nav id="sidebarMenu" class="collapse d-lg-block sidebar">
-        <h1 class="heading">
-            <span>W</span>eather
-            <i class=" fa-regular fa-circle-check"></i>
-        </h1>
-        <div class="inputWrapper">
-            <input type="text"  class="location__Input"  placeholder="Type location">
-            <button class ="btn btn-success checkBtn">
-                <i class="fa-solid fa-magnifying-glass"></i>
-            </button>    
-        </div>
-        <div id="toast"></div>
-    </nav>
-
     <!-- CONTENT-->
-        <div class="contentWrapper"></div> 
+
+    <form id="inputForm" name="inputForm">
+        <span class="p-1">Right now in</span>
+        <input type="text"  class="location__Input" placeholder="your location">
+        <span>, it's sunny.</span>
+    </form>
+    <div class="contentWrapper">
+        <div class="weather__current">
+            <span class="location___time">
+                Sunday, 10/2/2023
+            </span>
+            <div class="weather__info">
+                <span class="tempC">18 &deg;</span>
+                <img class="condition__icon" src="//cdn.weatherapi.com/weather/64x64/night/122.png">
+            </div>
+            <span class="location__name">VietNam </span> 
+            <div class="weather__detail">
+                <span class="detail__info">Wind
+                    <span>2.2 mph</span>
+                </span>
+                <span class="detail__info">Humidity
+                    <span>100</span>
+                </span>
+                <span class="detail__info">UV
+                    <span>1.0</span>
+                </span>
+            </div>
+        </div> 
+        <!-- <div class="chartWrapper">
+            <div class="chart__title">How's the temperature today?</div>
+            <canvas id="temperChart"></canvas>
+        </div> -->
+        <div class="cardWrapper">
+            <div class="card__detail">
+                <span class="card__time">19:00</span>
+                <img class="card__icon" src="//cdn.weatherapi.com/weather/64x64/night/122.png" />
+                <span class="card__tempC">19&deg;</span>
+                <span class="card__status">Sunny</span>
+            </div>
+            <div class="card__detail">
+                <span class="card__time">19:00</span>
+                <img class="card__icon" src="//cdn.weatherapi.com/weather/64x64/night/122.png" />
+                <span class="card__tempC">19&deg;</span>
+                <span class="card__status">Sunny</span>
+            </div>
+            <div class="card__detail">
+                <span class="card__time">19:00</span>
+                <img class="card__icon" src="//cdn.weatherapi.com/weather/64x64/night/122.png" />
+                <span class="card__tempC">19&deg;</span>
+                <span class="card__status">Sunny</span>
+            </div>
+            <div class="card__detail">
+                <span class="card__time">19:00</span>
+                <img class="card__icon" src="//cdn.weatherapi.com/weather/64x64/night/122.png" />
+                <span class="card__tempC">19&deg;</span>
+                <span class="card__status">Sunny</span>
+            </div>
+            <div class="card__detail">
+                <span class="card__time">19:00</span>
+                <img class="card__icon" src="//cdn.weatherapi.com/weather/64x64/night/122.png" />
+                <span class="card__tempC">19&deg;</span>
+                <span class="card__status">Sunny</span>
+            </div>
+            <div class="card__detail">
+                <span class="card__time">19:00</span>
+                <img class="card__icon" src="//cdn.weatherapi.com/weather/64x64/night/122.png" />
+                <span class="card__tempC">19&deg;</span>
+                <span class="card__status">Sunny</span>
+            </div>
+            <div class="card__detail">
+                <span class="card__time">19:00</span>
+                <img class="card__icon" src="//cdn.weatherapi.com/weather/64x64/night/122.png" />
+                <span class="card__tempC">19&deg;</span>
+                <span class="card__status">Sunny</span>
+            </div>
+        </div>
+      
+    </div> 
   
     <script src="./script.js"></script>
 </body>
