fix theme bug and add seperate for weather detail

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
             </div>
             <div class="weather__detail"> </div>
         </div>
-        <!-- CONTENT-->
-        <div id="content">
+        <!-- CONTAINER-->
+        <div id="container">
             <div class="nextdaysWrapper">
 
             </div>
