add responsive and change another font

--- a/index.html
+++ b/index.html
@@ -34,8 +34,12 @@
                 </form>
                 <div class="weather__current">
                     <div class="weather__info">
-                        <span class="weather__temperature"></span>
-                        <span class="temp__icon"></span>
+                        <div class="position-relative">
+                            <span class="weather__temperature "></span>
+                            <span class="temp__icon"></span>
+                        </div>
+                        
+                       
                         <div class="condition__icon">
                         </div>              
                     </div>
